src/objects/BRI_Demographic__c.object
<CustomObject>
    <fields>
        <fullName>BRI_Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BRI_Auto_Num__c</fullName>
        <label>Auto Num</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>BRI_AveMonthly_Support__c</fullName>
        <label>AveMonthly Support</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BRI_Average_Hours_Week__c</fullName>
        <label>Average Hours Week</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Average_Unpaid_Hours_CC__c</fullName>
        <label>Average Unpaid Hours CC</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Change_Date__c</fullName>
        <label>Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BRI_Change_Reason__c</fullName>
        <label>Change Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>change in duties</fullName>
                </value>
                <value>
                    <fullName>Death</fullName>
                </value>
                <value>
                    <fullName>illness</fullName>
                </value>
                <value>
                    <fullName>initial assignment</fullName>
                </value>
                <value>
                    <fullName>leave</fullName>
                </value>
                <value>
                    <fullName>left program/agency</fullName>
                </value>
                <value>
                    <fullName>specialist assigned</fullName>
                </value>
                <value>
                    <fullName>supervisor discreation</fullName>
                </value>
                <value>
                    <fullName>vacation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Change__c</fullName>
        <label>Change</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Child_Number__c</fullName>
        <label>Child Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_City__c</fullName>
        <label>City</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Comment__c</fullName>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BRI_Contact_Person__c</fullName>
        <label>Contact Person</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_County_Code__c</fullName>
        <label>County Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_County_Family_Resides__c</fullName>
        <label>County Family Resides</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Date__c</fullName>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BRI_Earnings__c</fullName>
        <label>Earnings</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Edu_Avg_Hours_Week__c</fullName>
        <label>Edu Avg Hours Week</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Education_Level__c</fullName>
        <label>Education Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>8th Grade or less</fullName>
                </value>
                <value>
                    <fullName>Certificate of High School Completion</fullName>
                </value>
                <value>
                    <fullName>Four Year College Degree</fullName>
                </value>
                <value>
                    <fullName>GED</fullName>
                </value>
                <value>
                    <fullName>Graduate Degree</fullName>
                </value>
                <value>
                    <fullName>High School Graduate</fullName>
                </value>
                <value>
                    <fullName>Some College</fullName>
                </value>
                <value>
                    <fullName>Some High School</fullName>
                </value>
                <value>
                    <fullName>Technical / Certification</fullName>
                </value>
                <value>
                    <fullName>Two Year Degree</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Employement_Status__c</fullName>
        <label>Employement Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>none</fullName>
                </value>
                <value>
                    <fullName>Employed Full Time</fullName>
                </value>
                <value>
                    <fullName>Employed Part Time</fullName>
                </value>
                <value>
                    <fullName>Maternity  leave, unpaid, full time</fullName>
                </value>
                <value>
                    <fullName>Maternity  leave, unpaid, part time</fullName>
                </value>
                <value>
                    <fullName>Maternity leave, paid, full time</fullName>
                </value>
                <value>
                    <fullName>Permanent Disability</fullName>
                </value>
                <value>
                    <fullName>Temporary Disability</fullName>
                </value>
                <value>
                    <fullName>Unemployed Not Seeking Work-Barriers</fullName>
                </value>
                <value>
                    <fullName>Unemployed Not Seeking Work-Preference</fullName>
                </value>
                <value>
                    <fullName>Unemployed Not Seeking Work-Teen Caregiver</fullName>
                </value>
                <value>
                    <fullName>Unemployed Seeking Work</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Employer__c</fullName>
        <label>Employer</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_End__c</fullName>
        <label>End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BRI_Events__c</fullName>
        <label>Events</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>HIV Screen</fullName>
                </value>
                <value>
                    <fullName>Lead Screen</fullName>
                </value>
                <value>
                    <fullName>Tuberculosis Screen</fullName>
                </value>
                <value>
                    <fullName>DTap</fullName>
                </value>
                <value>
                    <fullName>HepA</fullName>
                </value>
                <value>
                    <fullName>HepB</fullName>
                </value>
                <value>
                    <fullName>Hib</fullName>
                </value>
                <value>
                    <fullName>IPV</fullName>
                </value>
                <value>
                    <fullName>MMR</fullName>
                </value>
                <value>
                    <fullName>PCV</fullName>
                </value>
                <value>
                    <fullName>RotoVirus</fullName>
                </value>
                <value>
                    <fullName>Vericella</fullName>
                </value>
                <value>
                    <fullName>Had Chicken Pox</fullName>
                </value>
                <value>
                    <fullName>Flu Vaccine</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_FSW__c</fullName>
        <label>FSW</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>ABC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Family_Level__c</fullName>
        <label>Family Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1A</fullName>
                </value>
                <value>
                    <fullName>1C</fullName>
                </value>
                <value>
                    <fullName>II</fullName>
                </value>
                <value>
                    <fullName>III</fullName>
                </value>
                <value>
                    <fullName>IV</fullName>
                </value>
                <value>
                    <fullName>P1</fullName>
                </value>
                <value>
                    <fullName>SS</fullName>
                </value>
                <value>
                    <fullName>T</fullName>
                </value>
                <value>
                    <fullName>X1</fullName>
                </value>
                <value>
                    <fullName>X2</fullName>
                </value>
                <value>
                    <fullName>X3</fullName>
                </value>
                <value>
                    <fullName>UE</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>NS</fullName>
                </value>
                <value>
                    <fullName>1B</fullName>
                </value>
                <value>
                    <fullName>ST</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Family_Number__c</fullName>
        <label>Family Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_HHM_Auto_Num__c</fullName>
        <label>HHM Auto Num</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Highest_Grade__c</fullName>
        <label>Highest Grade</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>K</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>Pre-School</fullName>
                </value>
                <value>
                    <fullName>No -School</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_In_School__c</fullName>
        <label>In School</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_MS__c</fullName>
        <description>Married
Separated
Single
Widowed
Living with partner
Divorced
Unknown</description>
        <label>Marital Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>Married</fullName>
                </value>
                <value>
                    <fullName>Divorced/ Widowed</fullName>
                </value>
                <value>
                    <fullName>separated</fullName>
                </value>
                <value>
                    <fullName>unknown</fullName>
                </value>
                <value>
                    <fullName>Living with partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Med_Appt_Reason__c</fullName>
        <label>Med Appt Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Illness</fullName>
                </value>
                <value>
                    <fullName>Immunization Only</fullName>
                </value>
                <value>
                    <fullName>Injury-ER</fullName>
                </value>
                <value>
                    <fullName>Medication Related</fullName>
                </value>
                <value>
                    <fullName>Mental Health</fullName>
                </value>
                <value>
                    <fullName>Nutrition</fullName>
                </value>
                <value>
                    <fullName>Postpartum Checkup</fullName>
                </value>
                <value>
                    <fullName>Prenatal</fullName>
                </value>
                <value>
                    <fullName>Preventative</fullName>
                </value>
                <value>
                    <fullName>Routine</fullName>
                </value>
                <value>
                    <fullName>Well Child </fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Med_Appt_Type__c</fullName>
        <label>Med Appt Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>PCP</fullName>
                </value>
                <value>
                    <fullName>Dentist</fullName>
                </value>
                <value>
                    <fullName>OBGYN</fullName>
                </value>
                <value>
                    <fullName>Specialist</fullName>
                </value>
                <value>
                    <fullName>WIC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Name__c</fullName>
        <label>Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Number__c</fullName>
        <label>Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Other_phone__c</fullName>
        <label>Other phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>BRI_Outcome__c</fullName>
        <label>Outcome</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Phone_Type__c</fullName>
        <label>Phone Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Message Only</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>No phone</fullName>
                </value>
                <value>
                    <fullName>Text only</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Withheld</fullName>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Position__c</fullName>
        <label>Position</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Primary_Insurance__c</fullName>
        <label>Primary Insurance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Private</fullName>
                </value>
                <value>
                    <fullName>Medicaid</fullName>
                </value>
                <value>
                    <fullName>Medicare</fullName>
                </value>
                <value>
                    <fullName>HIP</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>TRICARE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Program_Within_County__c</fullName>
        <label>Program Within County</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Receive_Benefits__c</fullName>
        <label>Receive Benefits</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Result__c</fullName>
        <label>Result</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Received Vaccine</fullName>
                </value>
                <value>
                    <fullName>Refused Vaccine</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Same_addr_as_mob__c</fullName>
        <label>Same addr as mob</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Schedule__c</fullName>
        <label>Schedule</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>none</fullName>
                </value>
                <value>
                    <fullName>AAP</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Secondary_Insurance__c</fullName>
        <label>Secondary Insurance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Private</fullName>
                </value>
                <value>
                    <fullName>Medicaid</fullName>
                </value>
                <value>
                    <fullName>Medicare</fullName>
                </value>
                <value>
                    <fullName>HIP</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>TRICARE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Special_Edu_Services__c</fullName>
        <label>Special Edu Services</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Special_Need__c</fullName>
        <label>Special Need</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Start__c</fullName>
        <label>Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BRI_State_ID__c</fullName>
        <label>State ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Supervisor_Review__c</fullName>
        <label>Supervisor Review</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Type__c</fullName>
        <label>Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Which_Adult__c</fullName>
        <label>Which Adult</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Why_Not_Done__c</fullName>
        <label>Why Not Done</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Safety Reason</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Family Not Available(ALL)</fullName>
                </value>
                <value>
                    <fullName>Missed(ALL)</fullName>
                </value>
                <value>
                    <fullName>Refused(ALL)</fullName>
                </value>
                <value>
                    <fullName>Waived (ASQ:SE Only)</fullName>
                </value>
                <value>
                    <fullName>In Developmental Service (ASQ:3 Only)</fullName>
                </value>
                <value>
                    <fullName>MOB not participating in HV (EPDS Only)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Xfer1__c</fullName>
        <label>Xfer1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Xfer2__c</fullName>
        <label>Xfer2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Zip__c</fullName>
        <label>Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_phone__c</fullName>
        <label>phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PersonAddress__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PersonAddress</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Address History</relationshipLabel>
        <relationshipName>RelatedAddress</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PersonEducation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PersonEducation</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Education History</relationshipLabel>
        <relationshipName>PersonEducation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PersonEmployee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PersonEmployee</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Employement History</relationshipLabel>
        <relationshipName>PersonEmployee</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PersonFamilyLevel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PersonFamilyLevel</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Family Level History</relationshipLabel>
        <relationshipName>FamilyLevel</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PersonHealthLog__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PersonHealthLog</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Health Log History</relationshipLabel>
        <relationshipName>PersonHealthLog</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PersonInsurance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PersonInsurance</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Insurance History</relationshipLabel>
        <relationshipName>PersonInsurance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PersonMaritalStatus__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PersonMaritalStatus</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Marital Status History</relationshipLabel>
        <relationshipName>PersonMaritalStatus</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PersonProvider__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PersonProvider</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Provider History</relationshipLabel>
        <relationshipName>PersonProvider</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Person_FSW__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Person FSW</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>FSW History</relationshipLabel>
        <relationshipName>PersonFamilyServiceWorker</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Person__c</fullName>
        <label>Person</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Demographics</relationshipLabel>
        <relationshipName>Demographics</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Demographic</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Health_Log_Records</fullName>
        <columns>NAME</columns>
        <columns>BRI_Change_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>BRI_Demographic__c.BRI_HealthLog</value>
        </filters>
        <label>All Health Log Records</label>
    </listViews>
    <listViews>
        <fullName>All_Insurance_records</fullName>
        <columns>NAME</columns>
        <columns>BRI_Change_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>BRI_Demographic__c.BRI_Insurance</value>
        </filters>
        <label>All Insurance records</label>
    </listViews>
    <listViews>
        <fullName>All_address_records</fullName>
        <columns>BRI_Change_Date__c</columns>
        <columns>NAME</columns>
        <columns>BRI_Address__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>BRI_Demographic__c.BRI_Address</value>
        </filters>
        <label>All address records</label>
    </listViews>
    <listViews>
        <fullName>All_education_records</fullName>
        <columns>NAME</columns>
        <columns>BRI_Change_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>BRI_Demographic__c.BRI_Education</value>
        </filters>
        <label>All education records</label>
    </listViews>
    <listViews>
        <fullName>All_employment_records</fullName>
        <columns>BRI_Change_Date__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>BRI_Demographic__c.BRI_Employee</value>
        </filters>
        <label>All employment records</label>
    </listViews>
    <listViews>
        <fullName>All_marital_Status_Records</fullName>
        <columns>NAME</columns>
        <columns>BRI_MS__c</columns>
        <columns>BRI_Change_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>BRI_Demographic__c.BRI_Marital_Status</value>
        </filters>
        <label>All marital Status Records</label>
    </listViews>
    <nameField>
        <displayFormat>D-{0000}</displayFormat>
        <label>Demographic Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Demographics</pluralLabel>
    <recordTypes>
        <fullName>BRI_Address</fullName>
        <active>true</active>
        <label>Address</label>
    </recordTypes>
</CustomObject>